; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_iec61883.c_iec61883_parse_queue_hdv.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_iec61883.c_iec61883_parse_queue_hdv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iec61883_data = type { i32, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_4__*, %struct.TYPE_4__*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iec61883_data*, i32*)* @iec61883_parse_queue_hdv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iec61883_parse_queue_hdv(%struct.iec61883_data* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iec61883_data*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  store %struct.iec61883_data* %0, %struct.iec61883_data** %4, align 8
  store i32* %1, i32** %5, align 8
  br label %8

8:                                                ; preds = %45, %2
  %9 = load %struct.iec61883_data*, %struct.iec61883_data** %4, align 8
  %10 = getelementptr inbounds %struct.iec61883_data, %struct.iec61883_data* %9, i32 0, i32 1
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = icmp ne %struct.TYPE_4__* %11, null
  br i1 %12, label %13, label %46

13:                                               ; preds = %8
  %14 = load %struct.iec61883_data*, %struct.iec61883_data** %4, align 8
  %15 = getelementptr inbounds %struct.iec61883_data, %struct.iec61883_data* %14, i32 0, i32 1
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %6, align 8
  %17 = load %struct.iec61883_data*, %struct.iec61883_data** %4, align 8
  %18 = getelementptr inbounds %struct.iec61883_data, %struct.iec61883_data* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @avpriv_mpegts_parse_packet(i32 %19, i32* %20, %struct.TYPE_4__* %23, i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 1
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = load %struct.iec61883_data*, %struct.iec61883_data** %4, align 8
  %32 = getelementptr inbounds %struct.iec61883_data, %struct.iec61883_data* %31, i32 0, i32 1
  store %struct.TYPE_4__* %30, %struct.TYPE_4__** %32, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = call i32 @av_freep(%struct.TYPE_4__** %34)
  %36 = call i32 @av_freep(%struct.TYPE_4__** %6)
  %37 = load %struct.iec61883_data*, %struct.iec61883_data** %4, align 8
  %38 = getelementptr inbounds %struct.iec61883_data, %struct.iec61883_data* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = add nsw i32 %39, -1
  store i32 %40, i32* %38, align 8
  %41 = load i32, i32* %7, align 4
  %42 = icmp sgt i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %13
  %44 = load i32, i32* %7, align 4
  store i32 %44, i32* %3, align 4
  br label %47

45:                                               ; preds = %13
  br label %8

46:                                               ; preds = %8
  store i32 -1, i32* %3, align 4
  br label %47

47:                                               ; preds = %46, %43
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @avpriv_mpegts_parse_packet(i32, i32*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @av_freep(%struct.TYPE_4__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
